--- a/backend/package.json
+++ b/backend/package.json
@@ -11,9 +11,12 @@
   "description": "",
   "dependencies": {
     "@dqbd/tiktoken": "^1.0.12",
+    "bcryptjs": "^3.0.2",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.17.2",
-    "undici": "^6.19.8"
+    "undici": "^6.19.8",
+    "uuid": "^11.1.0"
   }
 }
