static frontend to react + full redesign

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,15 @@
 services:
   latex-proxy:
-    build: .
+    build:
+      context: .
+      args:
+        - VITE_API_URL=${VITE_API_URL:-}
     container_name: latex-proxy
-    restart: always
+    restart: unless-stopped
     ports:
-      - "${PORT:-3000}:${PORT:-3000}"
+      - "${PORT:-3000}:3000"
     environment:
+      NODE_ENV: production
       PORT: ${PORT:-3000}
       MONGO_URI: ${MONGO_URI}
       JWT_SECRET: ${JWT_SECRET}
@@ -13,6 +17,7 @@ services:
       API_KEY: ${API_KEY}
     networks:
       - caddy_net
+
 networks:
   caddy_net:
     external: true
